mobile responsibe design done

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"><link     rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <!-- css link -->
     <link rel="stylesheet" href="styles/portfolio.css">
+    <!-- fontawesome link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="font-open-sans">
-    <header>
+    <header class="">
         <nav>
             <div class="logo">
                 <h2>Ma<span class="color-orange">r</span>y</h2>
@@ -25,12 +27,12 @@
                 <li><button class="btn">Hire me</button></li>
             </ul>
         </nav>
-        <section id="banner">
+        <section id="banner" class="">
             <div class="banner-content">
                 <h2>Hi, I am</h2>
                 <h1>Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <div>
+                <div class="btn-group">
                     <button class="btn"><i class="fa-solid fa-arrow-up-from-bracket"></i> Download CV</button>
                     <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
                 </div>
@@ -40,7 +42,7 @@
             </div>
         </section>
     </header>
-    <section id="about">
+    <section id="about" class="">
         <div class="about-container">
             <div class="section-heading">
                 <h2>About me</h2>
@@ -66,7 +68,7 @@
             </div>
         </div>
     </section>
-    <section id="skills">
+    <section id="skills" class="">
         <div class="skill-container">
             <div class="section-heading">
                 <h2>What I do</h2>
@@ -96,7 +98,7 @@
             </div>
         </div>
     </section>
-    <section id="resume">
+    <section id="resume" class="">
         <div class="section-heading">
             <h2>A summary of My resume</h2>
         </div>
@@ -157,7 +159,7 @@
             <button class="btn"><i class="fa-solid fa-arrow-up-from-bracket"></i> Download CV</button>
         </div>
     </section>
-    <footer>
+    <footer class="">
         <section class="footer-container">
             <div class="social">
                 <h2>Lets Connect</h2>
